fixed lowell footnote size issue on mobile

--- a/lowellstylesimple.css
+++ b/lowellstylesimple.css
@@ -325,6 +325,9 @@ section > table {
 
 @media (max-width: 500px) {
   html {
+      font-size: 9px;
+  }
+  small {
       font-size: 8.5px;
   }
 }
